@@ -1,7 +1,7 @@
 -server
--Xmx1G
--XX:-UseBiasedLocking
--XX:+UseG1GC
+-agentpath:/usr/lib/trino/bin/libjvmkill.so
+-XX:InitialRAMPercentage=80
+-XX:MaxRAMPercentage=80
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
